--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,10 @@
     <link rel="icon" href="assets/img/favicon.png">
 
     <!--  Open Graph Tags -->
-    <meta property="og:title" content="CanYaDAO">
+    <meta property="og:title" content="instaswap">
     <meta property="og:description" content="The Global CanYa Governance Ecosystem. Join today.">
     <meta property="og:image" content="https://canstyle.io/assets/img/canya-tile.svg">
-    <meta property="og:url" content="https://canyadao.com/">
+    <meta property="og:url" content="https://instaswap.com/">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- CanYa Cards -->
