--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
   <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta charset="utf-8" />
-  <meta name="description" content="CanYa DAO">
+  <meta name="description" content="InstaSwap">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="robots" content="index, follow">
 
 
-    <title>CanYa DAO</title>
+    <title>InstaSwap</title>
     <base href="/">
 
     <!-- Styles -->
